--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -7,6 +7,8 @@
 body {
     font-family: "Poppins", "DM Sans", sans-serif;
     overflow-x: hidden !important;
+    margin: 0;
+    padding: 0;
 }
 
 html {
@@ -769,6 +771,11 @@ td {
     align-items: center;
     width: 100%;
     height: 414px;
+    margin: 0 auto;
+}
+
+.customHeroTextandImage {
+    gap: 100px;
 }
 
 .heroPlayerImage {
@@ -1088,4 +1095,8 @@ td {
     }
 }
 
-@media(min-width: 1048px) {}
+@media(min-width: 1400px) {
+    .customHeroTextandImage {
+        gap: 280px;
+    }
+}
